--- a/css/hikkaduwa.css
+++ b/css/hikkaduwa.css
@@ -14,6 +14,25 @@
     --box-shadow-main: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
+h2{
+    font-size: 18px;
+}
+
+h3{
+    font-size: 17px;
+}
+
+p{
+    font-size: 16px;
+    text-align: justify;
+}
+
+@media only screen and (max-width: 800px){
+    p{
+        font-size: 14px;
+    }
+}
+
 /**************** hikkaduwa first section ****************/
 .hikkaduwa-first{
     background-color: var(--primary-white);
