--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,7 @@ header label:hover{
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 75VH;
+    height: 100Vh;
     margin-top: auto;
 }
 
