--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ header label:hover{
     font-weight: 300;
     text-align: center;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 10%;
 }
 
 .main-viewport-header-text span{
